# flux-lang

./: .gitattributes  .gitignore  AGENTS.md  CODING_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test_replay.flux
crates/flux-cli/: Cargo.toml
crates/flux-cli/my-nucleus-scaffold/: hypotheses.md  nucleus.toml
crates/flux-cli/proptest-regressions/: csv_loader.txt  module_resolver.txt
crates/flux-cli/src/: csv_loader.rs  diagnostics.rs  error.rs  exit_codes.rs  interpreter.rs  lib.rs  main.rs  math_builtins.rs  module_resolver.rs  portfolio_ops.rs  stat_indicators.rs
crates/flux-cli/src/commands/: backtest.rs  build.rs  check.rs  fetch.rs  fmt.rs  init.rs  live.rs  mod.rs  run.rs
crates/flux-cli/src/data/: csv_writer.rs  error.rs  mod.rs  registry.rs  types.rs  yahoo.rs
crates/flux-cli/src/formatter/: ansi.rs  mod.rs
crates/flux-cli/src/live/: account_config.rs  account_runtime.rs  aggregator.rs  checkpoint.rs  connector.rs  fill_logger.rs  futures_roll.rs  harness.rs  loader.rs  manifest_format.rs  market_calendar.rs  mod.rs  poll_connector.rs  position.rs  product_registry.rs  reconnect.rs  replay.rs  replay_connector.rs  risk_limits.rs  state.rs  ws_connector.rs
crates/flux-cli/tests/: account_config_property.proptest-regressions  account_config_property.rs  aggregator_property.rs  backoff_property.rs  backtest_fidelity_integration.rs  backtester_engine_property.proptest-regressions  backtester_engine_property.rs  broker_adapter_property.rs  broker_harness_integration.rs  bug_exploration.rs  caret_property.rs  cli_integration.rs  colorize_property.proptest-regressions  colorize_property.rs  empyrean_smoke_test.rs  empyrean_wiring_integration.rs  empyrean_wiring_property.rs  fetch_csv_roundtrip_property.rs  fetch_date_property.rs  fetch_enum_property.rs  fetch_error_property.rs  fetch_integration.rs  fetch_invalid_date_property.rs  fetch_merge_property.rs  fetch_symbol_property.rs  fetch_timestamp_property.rs  fmt_integration.rs  fn_e2e_integration.rs  fn_interpreter_property.rs  fn_interpreter_unit.rs  fn_signal_property.rs  formatter_block_sep_property.rs  formatter_brace_property.rs  formatter_cleanliness_property.rs  formatter_idempotence_property.proptest-regressions  formatter_idempotence_property.rs  formatter_indent_property.rs  formatter_property.proptest-regressions  formatter_property.rs  formatter_spacing_property.rs  (+48 more)
crates/flux-cli/tests/fixtures/: bad_data.csv  connector_and_data_block_strategy.flux  data_block_override_test.flux  data_block_type_error.flux  invalid_data_block_syntax.flux  invalid_strategy.flux  market_calendar.toml  math_strategy.flux  messy_data_block.flux  missing_cols.csv  multi_asset_data.csv  no_data_block_strategy.flux  sample_data.csv  struct_errors.flux  struct_format_test.flux  struct_missing_fields.flux  struct_strategy.flux  type_error_strategy.flux  valid_data_block_strategy.flux  valid_strategy.flux
crates/flux-compiler/: Cargo.toml
crates/flux-compiler/benches/: lexer_bench.rs  parser_bench.rs
crates/flux-compiler/proptest-regressions/lexer/: tests_colon_colon_property.txt
crates/flux-compiler/proptest-regressions/parser/: tests_property.txt
crates/flux-compiler/proptest-regressions/typeck/: tests_property.txt  tests_type_system_property.txt
crates/flux-compiler/src/: error.rs  lib.rs
crates/flux-compiler/tests/: connector_block_property.rs  connector_keyword_property.rs  decorator_tests.rs  fn_codegen_unit.rs  fn_keyword_unit.rs  fn_parsing_unit.rs  fn_recursion_unit.rs  fn_state_access_unit.rs  fn_typeck_unit.rs  hot_cold_codegen_test.rs  manifest_parser_property.rs  struct_codegen_tests.rs  struct_pbt.rs  struct_typeck_unit.rs  type_system_parsing_property.proptest-regressions  type_system_parsing_property.rs
(+176 files in other folders)
