[package]
name = "flux-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "flux"
path = "src/main.rs"

[lib]
name = "flux_cli"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
flux-compiler = { path = "../flux-compiler" }
flux-runtime = { path = "../flux-runtime" }

[dev-dependencies]
proptest = { workspace = true }
regex = "1.10"
toml = "0.8"
