[package]
name = "flux-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "flux"
path = "src/main.rs"

[lib]
name = "flux_cli"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
is-terminal = "0.4"
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
chrono = { version = "0.4", features = ["serde"] }
flux-compiler = { path = "../flux-compiler" }
flux-runtime = { path = "../flux-runtime" }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
async-trait = "0.1"
toml = "0.8"
rand = "0.8"

[dev-dependencies]
proptest = { workspace = true }
regex = "1.10"
tempfile = "3"
